--- a/.github/workflows/oragono.yml
+++ b/.github/workflows/oragono.yml
@@ -8,21 +8,30 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.7]
 
     steps:
+
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+
+    - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.7
+
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cache
+          $GITHUB_WORKSPACE/oragono
+        key: ${{ runner.os }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install pre-commit pytest
         pip install -r requirements.txt
+
     - name: Lint
       run: |
         pre-commit run -a
