Use a dedicated 'deprecated' mark instead of add '-deprecated' for each spec
Also rename `@cases.SpecificationSelector.requiredBySpecification("xxx")`
to `@cases.mark_specifications("xxx")` because it's shorter and looks
like pytest's own syntax

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,11 +2,10 @@
 markers =
     RFC1459
     RFC2812
-    RFC-deprecated
     IRCv3.1
     IRCv3.2
-    IRCv3.2-deprecated
     message-tags
     multiline
     Oragono
     strict
+    deprecated
