--- a/.github/workflows/inspircd.yml
+++ b/.github/workflows/inspircd.yml
@@ -41,6 +41,7 @@ jobs:
     - name: Build InspIRCd
       run: |
         cd $GITHUB_WORKSPACE/inspircd/
+        patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
         ./configure --prefix=$HOME/.local/ --development
         make -j 4
         make install
