Change IRCv3 marks to reference capabilities instead of v3.1 / v3.2

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,27 @@
 [pytest]
 markers =
+    # specifications
     RFC1459
     RFC2812
-    IRCv3.1
-    IRCv3.2
-    message-tags
-    multiline
+    IRCv3
+    modern
+    ircdocs
     Oragono
+
+    # misc marks
     strict
     deprecated
+
+    # capabilities
+    away-notify
+    batch
+    echo-message
+    extended-join
+    labeled-response
+    message-tags
+    draft/multiline
+    multi-prefix
+    server-time
+
+    # isupport tokens
+    MONITOR
