--- a/.github/workflows/inspircd.yml
+++ b/.github/workflows/inspircd.yml
@@ -49,5 +49,6 @@ jobs:
     - name: Test with pytest
       run: |
         # testNoticeNonexistentChannel fails because of https://github.com/inspircd/inspircd/issues/1849
-        PATH=~/.local/bin:$PATH pytest --controller irctest.controllers.inspircd -k 'not Oragono and not deprecated and not strict and not testNoticeNonexistentChannel'
+        # testDirectMessageEcho fails because of https://github.com/inspircd/inspircd/issues/1851
+        PATH=~/.local/bin:$PATH pytest --controller irctest.controllers.inspircd -k 'not Oragono and not deprecated and not strict and not testNoticeNonexistentChannel and not testDirectMessageEcho'
 
