--- a/.github/workflows/oragono.yml
+++ b/.github/workflows/oragono.yml
@@ -18,6 +18,11 @@ jobs:
       with:
         python-version: 3.7
 
+    - uses: actions/setup-go@v2
+      with:
+        go-version: '~1.16'
+    - run: go version
+
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
