--- a/.github/workflows/charybdis.yml
+++ b/.github/workflows/charybdis.yml
@@ -49,5 +49,5 @@ jobs:
     - name: Test with pytest
       run: |
         # testQuitErrors is very flaky
-        PATH=~/.local/bin:$PATH pytest --controller=irctest.controllers.charybdis -k 'not Oragono and not deprecated and not strict and not testDoubleKickMessages and not testQuitErrors'
+        PATH=~/.local/bin:$PATH pytest --controller=irctest.controllers.charybdis -k 'not Ergo and not deprecated and not strict and not testDoubleKickMessages and not testQuitErrors'
 
