--- a/.github/workflows/inspircd.yml
+++ b/.github/workflows/inspircd.yml
@@ -51,5 +51,5 @@ jobs:
         # testNoticeNonexistentChannel fails because of https://github.com/inspircd/inspircd/issues/1849
         # testDirectMessageEcho fails because of https://github.com/inspircd/inspircd/issues/1851
         # testKeyValidation fails because of https://github.com/inspircd/inspircd/issues/1850
-        PATH=~/.local/bin:$PATH pytest --controller irctest.controllers.inspircd -k 'not Oragono and not deprecated and not strict and not testNoticeNonexistentChannel and not testDirectMessageEcho and not testKeyValidation'
+        PATH=~/.local/bin:$PATH pytest --controller irctest.controllers.inspircd -k 'not Ergo and not deprecated and not strict and not testNoticeNonexistentChannel and not testDirectMessageEcho and not testKeyValidation'
 
