--- a/.github/workflows/inspircd.yml
+++ b/.github/workflows/inspircd.yml
@@ -28,11 +28,9 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt-get install atheme-services
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
-
-    - name: Install atheme
-      run: sudo apt-get install atheme-services
 
     - name: Checkout InspIRCd
       uses: actions/checkout@v2
