--- a/.github/workflows/limnoria.yml
+++ b/.github/workflows/limnoria.yml
@@ -32,6 +32,6 @@ jobs:
 
     - name: Test with pytest
       run: |
-        PATH=~/.local/bin:$PATH pytest --controller=irctest.controllers.limnoria
+        PATH=~/.local/bin:$PATH make limnoria
 
 
