--- a/.github/workflows/solanum.yml
+++ b/.github/workflows/solanum.yml
@@ -49,7 +49,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        PATH=~/.local/bin:$PATH pytest --controller=irctest.controllers.solanum -k 'not Ergo and not deprecated and not strict and not testDoubleKickMessages'
+        PATH=~/.local/bin:$PATH make solanum
 
 
 
