.github/workflows/unrealircd.yml: Actually run the tests

--- a/.github/workflows/unrealircd.yml
+++ b/.github/workflows/unrealircd.yml
@@ -49,6 +49,6 @@ jobs:
 
     - name: Test with pytest
       run: |
-        PATH=~/.local/unrealircd/bin:$PATH make unreal
+        PATH=~/.local/unrealircd/bin:$PATH make unrealircd
 
 
