--- a/workflows.yml
+++ b/workflows.yml
@@ -1,6 +1,59 @@
 # Input used by make_workflows.py to generate .github/workflows/
 
 software:
+    charybdis:
+        name: Charybdis
+        repository: charybdis-ircd/charybdis
+        ref: charybdis-4.1.2
+        path: charybdis
+        build_script: |
+            cd $GITHUB_WORKSPACE/charybdis/
+            ./autogen.sh
+            ./configure --prefix=$HOME/.local/
+            make -j 4
+            make install
+
+    solanum:
+        name: Solanum
+        repository: solanum-ircd/solanum
+        ref: e370888264da666a1bd9faac86cd5f2aa06084f4
+        path: solanum
+        build_script: |
+            cd $GITHUB_WORKSPACE/solanum/
+            ./autogen.sh
+            ./configure --prefix=$HOME/.local/
+            make -j 4
+            make install
+
+    ergo:
+        name: Ergo
+        repository: ergochat/ergo
+        ref: irctest_stable
+        path: ergo
+        prefix: ~/go
+        pre_deps:
+            - uses: actions/setup-go@v2
+              with:
+                  go-version: '~1.16'
+            - run: go version
+        build_script: |
+            cd $GITHUB_WORKSPACE/ergo/
+            make build
+            make install
+
+    inspircd:
+        name: InspIRCd
+        repository: inspircd/inspircd
+        ref: v3.8.1
+        path: inspircd
+        prefix: ~/.local/inspircd
+        build_script: |
+            cd $GITHUB_WORKSPACE/inspircd/
+            patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
+            ./configure --prefix=$HOME/.local/inspircd --development
+            make -j 4
+            make install
+
     unrealircd:
         name: UnrealIRCd
         repository: unrealircd/unrealircd
