--- a/.github/workflows/solanum.yml
+++ b/.github/workflows/solanum.yml
@@ -37,7 +37,7 @@ jobs:
         make install
     - name: Test with pytest
       run: PATH=~/.local/bin:$PATH make solanum
-name: irctest with {name}
+name: irctest with Solanum
 'on':
   pull_request: null
   push: null
