--- a/.github/workflows/unrealircd.yml
+++ b/.github/workflows/unrealircd.yml
@@ -37,7 +37,7 @@ jobs:
         make install
     - name: Test with pytest
       run: PATH=~/.local/unrealircd/bin:$PATH make unrealircd
-name: irctest with {name}
+name: irctest with UnrealIRCd
 'on':
   pull_request: null
   push: null
