--- a/.github/workflows/limnoria_latest.yml
+++ b/.github/workflows/limnoria_latest.yml
@@ -13,31 +13,21 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-unrealircd
+        key: ${{ runner.os }}-limnoria
         path: |-
           ~/.cache
-          $GITHUB_WORKSPACE/unrealircd
+          $GITHUB_WORKSPACE/placeholder
     - name: Install dependencies
       run: |-
         sudo apt-get install atheme-services
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
-    - name: Checkout UnrealIRCd
-      uses: actions/checkout@v2
-      with:
-        path: unrealircd
-        ref: 94993a03ca8d3c193c0295c33af39270c3f9d27d
-        repository: unrealircd/unrealircd
-    - name: Build UnrealIRCd
-      run: |
-        cd $GITHUB_WORKSPACE/unrealircd/
-        cp $GITHUB_WORKSPACE/unreal/* .
-        CFLAGS=-O0 ./Config -quick
-        make -j 4
-        make install
+    - name: Install dependencies
+      run: pip install git+https://github.com/ProgVal/Limnoria.git@testing cryptography
     - name: Test with pytest
-      run: PATH=~/.local/unrealircd/bin:$PATH make unrealircd
-name: irctest with UnrealIRCd
+      run: PATH=~/.local/bin:$PATH make limnoria
+name: irctest with Limnoria
 'on':
-  pull_request: null
-  push: null
+  schedule:
+  - 51 8 * * 6
+  - 51 8 * * 0
