--- a/.github/workflows/unrealircd_devel.yml
+++ b/.github/workflows/unrealircd_devel.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: unrealircd
-        ref: 94993a03ca8d3c193c0295c33af39270c3f9d27d
+        ref: unreal52
         repository: unrealircd/unrealircd
     - name: Build UnrealIRCd
       run: |
@@ -39,5 +39,7 @@ jobs:
       run: PATH=~/.local/unrealircd/bin:$PATH make unrealircd
 name: irctest with UnrealIRCd
 'on':
-  pull_request: null
-  push: null
+  schedule:
+  - 51 8 * * 6
+  - 51 8 * * 0
+  - 51 17 * * *
