--- a/.github/workflows/inspircd_devel.yml
+++ b/.github/workflows/inspircd_devel.yml
@@ -40,6 +40,6 @@ jobs:
 name: irctest with InspIRCd
 on:
   schedule:
-  - '51 8 * * 6'
-  - '51 8 * * 0'
-  - '51 17 * * *'
+  - cron: '51 8 * * 6'
+  - cron: '51 8 * * 0'
+  - cron: '51 17 * * *'
