--- a/.github/workflows/limnoria_devel.yml
+++ b/.github/workflows/limnoria_devel.yml
@@ -29,6 +29,6 @@ jobs:
 name: irctest with Limnoria
 on:
   schedule:
-  - '51 8 * * 6'
-  - '51 8 * * 0'
-  - '51 17 * * *'
+  - cron: '51 8 * * 6'
+  - cron: '51 8 * * 0'
+  - cron: '51 17 * * *'
