--- a/.github/workflows/unrealircd_devel.yml
+++ b/.github/workflows/unrealircd_devel.yml
@@ -40,6 +40,6 @@ jobs:
 name: irctest with UnrealIRCd
 on:
   schedule:
-  - cron: '51 8 * * 6'
-  - cron: '51 8 * * 0'
-  - cron: '51 17 * * *'
+  - cron: 51 8 * * 6
+  - cron: 51 8 * * 0
+  - cron: 51 17 * * *
