--- a/.github/workflows/inspircd_devel.yml
+++ b/.github/workflows/inspircd_devel.yml
@@ -13,31 +13,33 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-unrealircd
+        key: ${{ runner.os }}-inspircd
         path: |-
           ~/.cache
-          $GITHUB_WORKSPACE/unrealircd
+          $GITHUB_WORKSPACE/inspircd
     - name: Install dependencies
       run: |-
         sudo apt-get install atheme-services
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
-    - name: Checkout UnrealIRCd
+    - name: Checkout InspIRCd
       uses: actions/checkout@v2
       with:
-        path: unrealircd
-        ref: 94993a03ca8d3c193c0295c33af39270c3f9d27d
-        repository: unrealircd/unrealircd
-    - name: Build UnrealIRCd
+        path: inspircd
+        ref: master
+        repository: inspircd/inspircd
+    - name: Build InspIRCd
       run: |
-        cd $GITHUB_WORKSPACE/unrealircd/
-        cp $GITHUB_WORKSPACE/unreal/* .
-        CFLAGS=-O0 ./Config -quick
+        cd $GITHUB_WORKSPACE/inspircd/
+        patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
+        ./configure --prefix=$HOME/.local/inspircd --development
         make -j 4
         make install
     - name: Test with pytest
-      run: PATH=~/.local/unrealircd/bin:$PATH make unrealircd
-name: irctest with UnrealIRCd
+      run: PATH=~/.local/inspircd/bin:$PATH make inspircd
+name: irctest with InspIRCd
 'on':
-  pull_request: null
-  push: null
+  schedule:
+  - cron: 51 8 * * 6
+  - cron: 51 8 * * 0
+  - cron: 51 17 * * *
