--- a/.github/workflows/solanum_devel.yml
+++ b/.github/workflows/solanum_devel.yml
@@ -13,31 +13,33 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-unrealircd
+        key: ${{ runner.os }}-solanum
         path: |-
           ~/.cache
-          $GITHUB_WORKSPACE/unrealircd
+          $GITHUB_WORKSPACE/solanum
     - name: Install dependencies
       run: |-
         sudo apt-get install atheme-services
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
-    - name: Checkout UnrealIRCd
+    - name: Checkout Solanum
       uses: actions/checkout@v2
       with:
-        path: unrealircd
-        ref: 94993a03ca8d3c193c0295c33af39270c3f9d27d
-        repository: unrealircd/unrealircd
-    - name: Build UnrealIRCd
+        path: solanum
+        ref: main
+        repository: solanum-ircd/solanum
+    - name: Build Solanum
       run: |
-        cd $GITHUB_WORKSPACE/unrealircd/
-        cp $GITHUB_WORKSPACE/unreal/* .
-        CFLAGS=-O0 ./Config -quick
+        cd $GITHUB_WORKSPACE/solanum/
+        ./autogen.sh
+        ./configure --prefix=$HOME/.local/
         make -j 4
         make install
     - name: Test with pytest
-      run: PATH=~/.local/unrealircd/bin:$PATH make unrealircd
-name: irctest with UnrealIRCd
+      run: PATH=~/.local/bin:$PATH make solanum
+name: irctest with Solanum
 'on':
-  pull_request: null
-  push: null
+  schedule:
+  - cron: 51 8 * * 6
+  - cron: 51 8 * * 0
+  - cron: 51 17 * * *
