--- a/.github/workflows/ergo_devel.yml
+++ b/.github/workflows/ergo_devel.yml
@@ -39,7 +39,7 @@ jobs:
         make install
     - name: Test with pytest
       run: PATH=~/go/bin:$PATH make ergo
-name: irctest with Ergo
+name: irctest with Ergo (devel)
 'on':
   schedule:
   - cron: 51 8 * * 6
