--- a/.github/workflows/inspircd.yml
+++ b/.github/workflows/inspircd.yml
@@ -37,7 +37,7 @@ jobs:
         make install
     - name: Test with pytest
       run: PATH=~/.local/inspircd/bin:$PATH make inspircd
-name: irctest with InspIRCd
+name: irctest with InspIRCd (stable)
 'on':
   pull_request: null
   push: null
