--- a/.github/workflows/limnoria_devel.yml
+++ b/.github/workflows/limnoria_devel.yml
@@ -26,7 +26,7 @@ jobs:
       run: pip install git+https://github.com/ProgVal/Limnoria.git@testing cryptography
     - name: Test with pytest
       run: PATH=~/.local/bin:$PATH make limnoria
-name: irctest with Limnoria
+name: irctest with Limnoria (devel)
 'on':
   schedule:
   - cron: 51 8 * * 6
