--- a/.github/workflows/unrealircd_devel.yml
+++ b/.github/workflows/unrealircd_devel.yml
@@ -37,7 +37,7 @@ jobs:
         make install
     - name: Test with pytest
       run: PATH=~/.local/unrealircd/bin:$PATH make unrealircd
-name: irctest with UnrealIRCd
+name: irctest with UnrealIRCd (devel)
 'on':
   schedule:
   - cron: 51 8 * * 6
