--- a/.github/workflows/inspircd_devel_release.yml
+++ b/.github/workflows/inspircd_devel_release.yml
@@ -43,3 +43,4 @@ name: irctest with InspIRCd (devel_release)
   - cron: 51 8 * * 6
   - cron: 51 8 * * 0
   - cron: 51 17 * * *
+  workflow_dispatch: null
