--- a/.github/workflows/unrealircd_devel.yml
+++ b/.github/workflows/unrealircd_devel.yml
@@ -43,3 +43,4 @@ name: irctest with UnrealIRCd (devel)
   - cron: 51 8 * * 6
   - cron: 51 8 * * 0
   - cron: 51 17 * * *
+  workflow_dispatch: null
