Skip services tests on Insp4.
Atheme doesn't support it yet.

--- a/.github/workflows/inspircd_devel.yml
+++ b/.github/workflows/inspircd_devel.yml
@@ -36,7 +36,7 @@ jobs:
         make -j 4
         make install
     - name: Test with pytest
-      run: PATH=~/.local/inspircd/bin:$PATH make inspircd
+      run: PATH=~/.local/inspircd/bin:$PATH PYTEST_ARGS="-m 'not services'" make inspircd
 name: irctest with InspIRCd (devel)
 'on':
   schedule:
