--- a/workflows.yml
+++ b/workflows.yml
@@ -70,6 +70,9 @@ software:
             release: null
             devel: master
             devel_release: insp3
+        env:
+            # Atheme does not support Insp4 yet, so it fails to connect
+            devel: "PYTEST_ARGS=\"-m 'not services'\""
         path: inspircd
         prefix: ~/.local/inspircd
         build_script: |
