--- a/.github/workflows/limnoria_devel.yml
+++ b/.github/workflows/limnoria_devel.yml
@@ -2,7 +2,7 @@
 # Do not edit it manually, modifications will be lost.
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -25,7 +25,27 @@ jobs:
     - name: Install dependencies
       run: pip install git+https://github.com/ProgVal/Limnoria.git@testing cryptography
     - name: Test with pytest
-      run: PATH=~/.local/bin:$PATH make limnoria
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/bin:$PATH make limnoria
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results {name} ({version_flavor.value})
+        path: pytest.xml
+  publish-test-results:
+    if: success() || failure()
+    name: Publish Unit Tests Results
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Download Artifacts
+      uses: actions/download-artifact@v2
+      with:
+        path: artifacts
+    - name: Publish Unit Test Results
+      uses: EnricoMi/publish-unit-test-result-action@v1
+      with:
+        files: artifacts/**/*.xml
 name: irctest with Limnoria (devel)
 'on':
   schedule:
