--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -62,7 +62,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results {name} ({version_flavor.value})
+        name: pytest results Charybdis (stable)
         path: pytest.xml
   test-ergo:
     runs-on: ubuntu-latest
@@ -105,7 +105,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results {name} ({version_flavor.value})
+        name: pytest results Ergo (stable)
         path: pytest.xml
   test-inspircd:
     runs-on: ubuntu-latest
@@ -147,7 +147,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results {name} ({version_flavor.value})
+        name: pytest results InspIRCd (stable)
         path: pytest.xml
   test-limnoria:
     runs-on: ubuntu-latest
@@ -177,7 +177,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results {name} ({version_flavor.value})
+        name: pytest results Limnoria (stable)
         path: pytest.xml
   test-solanum:
     runs-on: ubuntu-latest
@@ -218,7 +218,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results {name} ({version_flavor.value})
+        name: pytest results Solanum (stable)
         path: pytest.xml
   test-sopel:
     runs-on: ubuntu-latest
@@ -248,7 +248,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results {name} ({version_flavor.value})
+        name: pytest results Sopel (stable)
         path: pytest.xml
   test-unrealircd:
     runs-on: ubuntu-latest
@@ -290,7 +290,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results {name} ({version_flavor.value})
+        name: pytest results UnrealIRCd (stable)
         path: pytest.xml
 name: irctest with stable versions
 'on':
