--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -2,7 +2,22 @@
 # Do not edit it manually, modifications will be lost.
 
 jobs:
-  build:
+  publish-test-results:
+    if: success() || failure()
+    name: Publish Unit Tests Results
+    needs:
+    - test-inspircd
+    runs-on: ubuntu-latest
+    steps:
+    - name: Download Artifacts
+      uses: actions/download-artifact@v2
+      with:
+        path: artifacts
+    - name: Publish Unit Test Results
+      uses: EnricoMi/publish-unit-test-result-action@v1
+      with:
+        files: artifacts/**/*.xml
+  test-inspircd:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -26,7 +41,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: inspircd
-        ref: v3.10.0
+        ref: insp3
         repository: inspircd/inspircd
     - name: Build InspIRCd
       run: |
@@ -36,8 +51,18 @@ jobs:
         make -j 4
         make install
     - name: Test with pytest
-      run: PATH=~/.local/inspircd/bin:$PATH make inspircd
-name: irctest with InspIRCd (stable)
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/inspircd/bin:$PATH make
+        inspircd
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results InspIRCd (devel_release)
+        path: pytest.xml
+name: irctest with devel_release versions
 'on':
-  pull_request: null
-  push: null
+  schedule:
+  - cron: 51 8 * * 6
+  - cron: 51 8 * * 0
+  - cron: 51 17 * * *
+  workflow_dispatch: null
