--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -48,7 +48,7 @@ jobs:
         cd $GITHUB_WORKSPACE/inspircd/
         patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
         ./configure --prefix=$HOME/.local/inspircd --development
-        make -j 4
+        make -j 4 INSPIRCD_DEBUG=3
         make install
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/inspircd/bin:$PATH make
