--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-charybdis
+        key: ${{ runner.os }}-charybdis-stable
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/charybdis
@@ -79,7 +79,7 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-ergo
+        key: ${{ runner.os }}-ergo-stable
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/ergo
@@ -115,13 +115,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: Cache dependencies
-      uses: actions/cache@v2
-      with:
-        key: ${{ runner.os }}-inspircd
-        path: |-
-          ~/.cache
-          $GITHUB_WORKSPACE/inspircd
     - name: Install dependencies
       run: |-
         sudo apt-get install atheme-services
@@ -160,7 +153,7 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-limnoria
+        key: ${{ runner.os }}-limnoria-stable
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/placeholder
@@ -190,7 +183,7 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-solanum
+        key: ${{ runner.os }}-solanum-stable
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/solanum
@@ -231,7 +224,7 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-sopel
+        key: ${{ runner.os }}-sopel-stable
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/placeholder
@@ -261,7 +254,7 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-unrealircd
+        key: ${{ runner.os }}-unrealircd-stable
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/unrealircd
