--- a/workflows.yml
+++ b/workflows.yml
@@ -80,7 +80,7 @@ software:
             cd $GITHUB_WORKSPACE/inspircd/
             patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
             ./configure --prefix=$HOME/.local/inspircd --development
-            make -j 4 INSPIRCD_DEBUG=3
+            make -j 4
             make install
 
     unrealircd:
