Add Anope controller, and use it with inspircd and unreal

--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -7,6 +7,7 @@ jobs:
     name: Publish Unit Tests Results
     needs:
     - test-inspircd
+    - test-inspircd-anope
     runs-on: ubuntu-latest
     steps:
     - name: Download Artifacts
@@ -51,6 +52,41 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: pytest results InspIRCd (devel_release)
+        path: pytest.xml
+  test-inspircd-anope:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Install dependencies
+      run: |-
+        sudo apt-get install atheme-services
+        python -m pip install --upgrade pip
+        pip install pytest -r requirements.txt
+    - name: Checkout InspIRCd with Anope
+      uses: actions/checkout@v2
+      with:
+        path: inspircd
+        ref: insp3
+        repository: inspircd/inspircd
+    - name: Build InspIRCd with Anope
+      run: |
+        cd $GITHUB_WORKSPACE/inspircd/
+        patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
+        ./configure --prefix=$HOME/.local/inspircd --development
+        make -j 4
+        make install
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/inspircd/bin:$PATH make
+        inspircd-anope
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results InspIRCd with Anope (devel_release)
         path: pytest.xml
 name: irctest with devel_release versions
 'on':
