--- a/workflows.yml
+++ b/workflows.yml
@@ -83,7 +83,42 @@ software:
             make -j 4
             make install
 
+    inspircd-anope:
+        name: InspIRCd with Anope
+        repository: inspircd/inspircd
+        refs:
+            stable: v3.10.0
+            release: null
+            devel: master
+            devel_release: insp3
+        path: inspircd
+        prefix: ~/.local/inspircd
+        cache: false  # incremental compilation is frequently broken
+        build_script: |
+            cd $GITHUB_WORKSPACE/inspircd/
+            patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
+            ./configure --prefix=$HOME/.local/inspircd --development
+            make -j 4
+            make install
+
     unrealircd:
+        name: UnrealIRCd
+        repository: unrealircd/unrealircd
+        refs:
+            stable: 94993a03ca8d3c193c0295c33af39270c3f9d27d  # 5.2.1-rc1
+            release: null
+            devel: unreal52
+            devel_release: null
+        path: unrealircd
+        prefix: ~/.local/unrealircd
+        build_script: |
+            cd $GITHUB_WORKSPACE/unrealircd/
+            cp $GITHUB_WORKSPACE/unreal/* .
+            CFLAGS=-O0 ./Config -quick
+            make -j 4
+            make install
+
+    unrealircd-anope:
         name: UnrealIRCd
         repository: unrealircd/unrealircd
         refs:
